include/node/track.h

/**
 * @brief Opaque handle to a track (olive::Track).
 *
 * The handle IS the C++ object pointer; no wrapper is allocated.
 */
typedef struct OakNodeTrack OakNodeTrack;
/**
 * @brief Opaque handle to a per-type track container (olive::TrackList).
 *
 * Borrowed from oaknode_sequence_get_track_list(); invalidated when the
 * owning sequence is destroyed.
 */
typedef struct OakNodeTrackList OakNodeTrackList;
/**
 * @brief Opaque handle to a block (olive::Block), see node/block.h.
 */
typedef struct OakNodeBlock OakNodeBlock;
/**
 * @brief Opaque handle to a sequence (olive::Sequence), see node/sequence.h.
 */
typedef struct OakNodeSequence OakNodeSequence;
/**
 * @brief Track types, matching olive::Track::Type.
 */
enum OakNodeTrackType {
	OAKNODE_TRACK_TYPE_NONE = -1,
	OAKNODE_TRACK_TYPE_VIDEO = 0,
	OAKNODE_TRACK_TYPE_AUDIO = 1,
	OAKNODE_TRACK_TYPE_SUBTITLE = 2,
	OAKNODE_TRACK_TYPE_COUNT = 3
};
/* Re-declared here so track.h is self-contained; see node/node.h. */
typedef struct OakNodeNode OakNodeNode;