include/node/sequence.h

/**
 * @brief Sequence texture/samples input ids (ViewerOutput::k_texture_input
 * / k_samples_input) and the track input id format
 * (Sequence::k_track_input_format). Pinned by test.
 */
#define OAKNODE_SEQUENCE_TEXTURE_INPUT "tex_in"
#define OAKNODE_SEQUENCE_SAMPLES_INPUT "samples_in"
/* Re-declared here so sequence.h is self-contained; see node/node.h. */
typedef struct OakNodeNode OakNodeNode;
/**
 * @brief Opaque handle to a sequence (olive::Sequence).
 *
 * The handle IS the C++ object pointer; no wrapper is allocated.
 */
typedef struct OakNodeSequence OakNodeSequence;
/**
 * @brief Opaque handle to a track list (olive::TrackList), see node/track.h.
 */
typedef struct OakNodeTrackList OakNodeTrackList;
/**
 * @brief Opaque handle to a track (olive::Track), see node/track.h.
 */
typedef struct OakNodeTrack OakNodeTrack;